<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="id">id:</string>
    <string name="log_in">LOGIN</string>

    <string name="title_activity_logged__in__user">Logged_In_User</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Employees">Employees</string>
    <string name="Projects">Projects</string>
    <string name="Id2">Id: </string>
    <string name="Id">Id</string>
    <string name="Name">Name</string>
    <string name="Department">Department</string>
    <string name="StartDate">Start Date</string>
    <string name="DueDate">Due Date</string>
    <string name="Project">Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_having_fragment">HavingFragment</string>
    <string name="AddProject">Add a New Project</string>
    <string name="addTask">Add a New Task</string>
    <string name="addEmployee">Add a New Employee</string>
    <string name="estimatedCost">Estimated Cost</string>
    <string name="assignee">Assignee</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="removeTask">Remove Task</string>
    <string name="remove">REMOVE</string>
    <string name="update">UPDATE</string>
    <string name="email">Email address</string>
    <string name="deleteEmployee">Delete Employee</string>
    <string name="deleteProject">Delete Project</string>
    <string name="Profile">Profile Page</string>

</resources>
