<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
       style="@style/FormElement"
        android:orientation="horizontal"
      >

        <TextView
            android:id="@+id/id"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Id"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="@string/Name"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/StartDate"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/DueDate"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>