<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="89dp"
        app:srcCompat="@drawable/border"
        android:layout_weight="0.01" />

    <LinearLayout
        style="@style/FormElement"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Id"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Name"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Department"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Type"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>