<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gunesyurdakul.myapplication.Projects"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/addProjectLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Task Name"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/taskName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Task Id"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/taskId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/estimatedCost"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/estimatedCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/assignee"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/assignee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/setStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorPrimary"
                    android:text="@string/StartDate"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/setDueDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    android:text="@string/DueDate"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startDateT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dueDateT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/updateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/update"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/removeTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/remove"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_dark" />


</LinearLayout>
